.provarCaches/00D5f000005vwGkEAI/objects/rstk__sohsales__c.object
<CustomObject>
    <description>sohsales__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid or the externalid field itself is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohsales_comments__c</fullName>
        <inlineHelpText>These are the comments for this Salesperson on this Sales Order</inlineHelpText>
        <label>Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sohsales_compct__c</fullName>
        <inlineHelpText>This is  the total Commission percentage for this salesperson on this SO.</inlineHelpText>
        <label>Commission Pct.</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__sohsales_sohdr__c</fullName>
        <inlineHelpText>This is the Sales Order Number</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>sohsales</relationshipLabel>
        <relationshipName>sohsales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sohsales_spersn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Salesperson on this Sales Order</inlineHelpText>
        <label>Salesperson</label>
        <referenceTo>rstk__sosales__c</referenceTo>
        <relationshipLabel>sohsales</relationshipLabel>
        <relationshipName>sohsales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sohsales_split__c</fullName>
        <inlineHelpText>This is the commission Split percentage</inlineHelpText>
        <label>Commission Split Pct.</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>sohsales</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sohsales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_CommPct</fullName>
        <active>true</active>
        <description>Validation Commission Pct</description>
        <errorConditionFormula>OR (
  rstk__sohsales_compct__c &lt; 0,
  rstk__sohsales_compct__c &gt; 1
)</errorConditionFormula>
        <errorMessage>Commission Pct value must between 0 to 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_CommSplitPct</fullName>
        <active>true</active>
        <description>Validation Commission Split Pct</description>
        <errorConditionFormula>OR (
  rstk__sohsales_split__c &lt; 0,
  rstk__sohsales_split__c &gt; 1
)</errorConditionFormula>
        <errorMessage>Commission Split Pct value must between 0 to 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Salesperson</fullName>
        <active>true</active>
        <description>Validation Salesperson</description>
        <errorConditionFormula>ISBLANK(rstk__sohsales_spersn__c)</errorConditionFormula>
        <errorMessage>Please enter required field Salesperson</errorMessage>
    </validationRules>
</CustomObject>